Continue cleaning the artefacts of previous project

--- a/index.html
+++ b/index.html
@@ -1,80 +1,32 @@
 <!DOCTYPE html>
-<html lang="ru" dir="ltr">
+<html dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&display=swap" rel="stylesheet">
-    <link rel="icon" href="/assets/logos/V.ico" type="image/x-icon">
-    <link rel="icon" type="image/svg+xml" href="/assets/logos/V.svg">
-    <title>ValentinaGuestHouse</title>
+    <title>JS Slider</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
     <div class="container">
-      <h1>НАШИ НОМЕРА</h1>
       <ul class="rooms-list">
         <li class="rooms-list__item room_type1">
-          <div class="rooms-list__description">
-            <a href="#">
-              <h2>2-х местный</h2>
-              <ul>
-                <li>Площадь номера: 11 м2</li>
-                <li>1 двуспальная кровать или 2 односпальные кровати</li>
-                <li>Кондиционер</li>
-                <li>Интернет</li>
-                <li>Телевизор</li>
-              </ul>
-            </a>
-          </div>
+          1
         </li>
         <li class="rooms-list__item room_type2">
-          <div class="rooms-list__description">
-            <a href="#">
-              <h2>Семейный</h2>
-              <ul>
-                <li>Площадь номера: 18 м2</li>
-                <li>1 двуспальная кровать или 1 односпальная кровать </li>
-                <li>Кондиционер</li>
-                <li>Интернет</li>
-                <li>Телевизор</li>
-              </ul>
-            </a>
-          </div>
+          2
         </li>
         <li class="rooms-list__item room_type3">
-          <div class="rooms-list__description">
-            <a href="#">
-              <h2>Deluxe</h2>
-              <ul>
-                <li>Площадь номера: 30 м2</li>
-                <li>1 двуспальная кровать или 1 раскладной диван</li>
-                <li>Кондиционер</li>
-                <li>Интернет</li>
-                <li>Телевизор</li>
-                <li>2 комнаты</li>
-              </ul>
-            </a>
-          </div>
+          3
         </li>
         <li class="rooms-list__item room_type4">
-          <div class="rooms-list__description">
-            <a href="#">
-              <h2>Deluxe Plus</h2>
-              <ul>
-                <li>Площадь номера: 45 м2</li>
-                <li>2 односпальные кровати, 1 двуспальная кровать, 1 диван</li>
-                <li>Кондиционер</li>
-                <li>Интернет</li>
-                <li>Телевизор</li>
-                <li>3 комнаты</li>
-              </ul>
-            </a>
-          </div>
+          4
         </li>
       </ul>
+    </div>
+    <div class="fidback__controller">
+          <button type="button" name="fidback-prev-button">&larr;</button>
+          <button type="button" name="fidback-next-button">&rarr;</button>
     </div>
 
 
