done preparing sample files

--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@
   <body>
 
     <div class="container">
-      <ul class="rooms-list">
-        <li class="rooms-list__item room_type1">
-          1
+      <ul class="list">
+        <li class="list__item">
+          <div class="list__item_inner">1</div>
         </li>
-        <li class="rooms-list__item room_type2">
-          2
+        <li class="list__item">
+          <div class="list__item_inner">2</div>
         </li>
-        <li class="rooms-list__item room_type3">
-          3
+        <li class="list__item">
+          <div class="list__item_inner">3</div>
         </li>
-        <li class="rooms-list__item room_type4">
-          4
+        <li class="list__item">
+          <div class="list__item_inner">4</div>
         </li>
       </ul>
+
+      <div class="arrows">
+            <button type="button" name="prev-button">&larr;</button>
+            <button type="button" name="next-button">&rarr;</button>
+      </div>
+
     </div>
-    <div class="fidback__controller">
-          <button type="button" name="fidback-prev-button">&larr;</button>
-          <button type="button" name="fidback-next-button">&rarr;</button>
-    </div>
+
 
 
     <script src="mySliderStart.js"></script>
