--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 
-    <script src="mySliderStart.js"></script>
-    <script src="mainPageSlider.js"></script>
+    <script src="microSlider.js"></script>
+    <script src="OnPageSlider.js"></script>
   </body>
 </html>
